--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ MathJax.Hub.Config({
 		<span class="glyphicon glyphicon-envelope"></span>
 	</div>
 	<div class="media-body">
-		<span class="email">flavien<span class="emailobfuscate">leschaussettes</span>@<span class="emailobfuscate">de</span>math.ucla.<span class="emailobfuscate">l'archiduchesse</span>edu</span>
+		<span class="email">flavien.leger<span class="emailobfuscate">leschaussettes</span>@<span class="emailobfuscate">de</span>nyu.<span class="emailobfuscate">l'archiduchesse</span>edu</span>
 	</div>
 </div>
 
