--- a/index (air.local's conflicted copy 2019-12-06).html
+++ b/index (air.local's conflicted copy 2019-12-06).html
@@ -44,7 +44,15 @@ MathJax.Hub.Config({
 </div>
 
 
-
+<div class="media">
+	<div class="media-left media-middle">
+		<span class="glyphicon glyphicon-briefcase"></span>
+	</div>
+	<div class="media-body">
+		Assistant Adjunct Professor<br>
+		UCLA, Department of Mathematics
+	</div>
+</div>
 
 
 <div class="media">
@@ -74,7 +82,7 @@ MathJax.Hub.Config({
 		<span class="glyphicon glyphicon-envelope"></span>
 	</div>
 	<div class="media-body">
-		<span class="email">flavien<span class="emailobfuscate">leschaussettes</span>leger@<span class="emailobfuscate">de</span>nyu.<span class="emailobfuscate">l'archiduchesse</span>edu</span>
+		<span class="email">flavien<span class="emailobfuscate">leschaussettes</span>@<span class="emailobfuscate">de</span>math.ucla.<span class="emailobfuscate">l'archiduchesse</span>edu</span>
 	</div>
 </div>
 
