--- a/matrixcompletion.html
+++ b/matrixcompletion.html
@@ -41,6 +41,8 @@ MathJax.Hub.Config({
 
 <li><a href="optimal-transport.html">Optimal Transport</a></li>
 
+<li><a href="gradient-flows.html">Gradient Flows</a></li>
+
 <li><a href="aggregation.html">Aggregation</a></li>
 
 <li class="active"><a href="matrixcompletion.html">Matrix Completion</a></li>
