--- a/optimal-transport.html
+++ b/optimal-transport.html
@@ -41,6 +41,8 @@ MathJax.Hub.Config({
 
 <li class="active"><a href="optimal-transport.html">Optimal Transport</a></li>
 
+<li><a href="gradient-flows.html">Gradient Flows</a></li>
+
 <li><a href="aggregation.html">Aggregation</a></li>
 
 <li><a href="matrixcompletion.html">Matrix Completion</a></li>
@@ -55,7 +57,7 @@ MathJax.Hub.Config({
 
 <h2>Videos</h2>
 
-<p>The following videos illustrate displacement interpolation between two uniform probability densities supported on a domain (in white here).
+<p>The following videos illustrate displacement interpolation between two probability densities.
 </p>
 
 <div class="row">
@@ -77,6 +79,23 @@ MathJax.Hub.Config({
 		</div>
 	</div><!--col-sm-6-->
 	
+	<div class="col-sm-6">
+		<div class="thumbnail">
+			<video controls poster="resources/ucla/ot/two_gaussians_512_from_2048.png">
+				<source src="resources/ucla/ot/two_gaussians_512_from_2048.mp4" type="video/mp4">
+			</video>
+		<div class="caption">Two Gaussians to two Gaussians.</div>
+		</div>
+	</div><!--col-sm-6-->
+
+<div class="col-sm-6">
+		<div class="thumbnail">
+			<video controls poster="resources/ucla/ot/rectangles3_512_from_2048.png">
+				<source src="resources/ucla/ot/rectangles3_512_from_2048.mp4" type="video/mp4">
+			</video>
+		<div class="caption">Uniform densities on rectangles.</div>
+		</div>
+	</div><!--col-sm-6-->
 
 	<div class="col-sm-6">
 		<div class="thumbnail">
@@ -87,7 +106,6 @@ MathJax.Hub.Config({
 		</div>
 	</div><!--col-sm-6-->
 	
-	
 	<div class="col-sm-6">
 		<div class="thumbnail">
 			<video controls poster="resources/ucla/ot/cat-to-paw.png">
@@ -96,16 +114,7 @@ MathJax.Hub.Config({
 		<div class="caption">Cat to cat paw.</div>
 		</div>
 	</div><!--col-sm-6-->
-	
-	<div class="col-sm-6">
-		<div class="thumbnail">
-			<video controls poster="resources/ucla/ot/shark-to-circles.png">
-				<source src="resources/ucla/ot/shark-to-circles.mp4" type="video/mp4">
-			</video>
-		<div class="caption">Shark to circles.</div>
-		</div>
-	</div><!--col-sm-6-->
-</div><!--row-->
+
 
 <h2>Caffarelli's counterexample</h2>
 <p>In <a href="#ref1">[1]</a> Caffarelli showed that the optimal transport map can be discontinuous when a measure is supported on a non-convex domain.
