Fixed issue with blue pill

--- a/aggregation.html
+++ b/aggregation.html
@@ -39,11 +39,11 @@ MathJax.Hub.Config({
 
 <ul class="nav nav-pills">
 
-<li class="active"><a href="optimal-transport.html">Optimal Transport</a></li>
+<li><a href="optimal-transport.html">Optimal Transport</a></li>
 
 <li><a href="gradient-flows.html">Gradient Flows</a></li>
 
-<li><a href="aggregation.html">Aggregation</a></li>
+<li class="active"><a href="aggregation.html">Aggregation</a></li>
 
 <li><a href="matrixcompletion.html">Matrix Completion</a></li>
 
