Added slides and Sinkhorn sections

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ MathJax.Hub.Config({
 
 <li><a href="publications.html">Papers</a></li>
 
+<li><a href="slides.html">Slides</a></li>
+
 <li><a href="teaching.html">Teaching</a></li>
 
 <li><a href="other.html">Other</a></li>
