--- a/matrixcompletion.html
+++ b/matrixcompletion.html
@@ -28,6 +28,8 @@ MathJax.Hub.Config({
 
 <li><a href="publications.html">Papers</a></li>
 
+<li><a href="slides.html">Slides</a></li>
+
 <li><a href="teaching.html">Teaching</a></li>
 
 <li><a href="other.html">Other</a></li>
@@ -42,6 +44,8 @@ MathJax.Hub.Config({
 <li><a href="optimal-transport.html">Optimal Transport</a></li>
 
 <li><a href="gradient-flows.html">Gradient Flows</a></li>
+
+<li><a href="sinkhorn.html">Sinkhorn</a></li>
 
 <li><a href="aggregation.html">Aggregation</a></li>
 
