--- a/gradient-flows.html
+++ b/gradient-flows.html
@@ -14,7 +14,9 @@ MathJax.Hub.Config({
 	TeX: { equationNumbers: {autoNumber: "AMS"} }
 });
 </script>
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
 </head>
 
 <body>
