--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@ MathJax.Hub.Config({
 </div>
 
 
+<div class="media">
+	<div class="media-left media-middle">
+		<span class="glyphicon glyphicon-briefcase"></span>
+	</div>
+	<div class="media-body">
+		Postdoc at ENS Paris
+	</div>
+</div>
 
 
 
