--- a/slides.html
+++ b/slides.html
@@ -41,6 +41,12 @@ MathJax.Hub.Config({
 
 <h1>Slides of some selected talks</h1>
 
+<h3>MokaMeetings (apr 2020)</h3>
+<p>
+<a href="https://slides.com/flavienleger/backandforth">The back-and-forth method</a>
+</p>
+
+
 <h3>VU Amsterdam math colloquium (jan 2020)</h3>
 <p>
 <a href="resources/slides_sb_2020jan.key">The Schrödinger bridge problem</a> (Keynote .key file, 20 MB)
