--- a/optimal-transport.html
+++ b/optimal-transport.html
@@ -114,10 +114,10 @@ MathJax.Hub.Config({
 	
 	<div class="col-sm-6">
 		<div class="thumbnail">
-			<video controls poster="resources/ucla/ot/cat-to-paw.png">
-				<source src="resources/ucla/ot/cat-to-paw.mp4" type="video/mp4">
+			<video controls poster="resources/ucla/ot/batman.png">
+				<source src="resources/ucla/ot/batman.mp4" type="video/mp4">
 			</video>
-		<div class="caption">Cat to cat paw.</div>
+		<div class="caption">Logo.</div>
 		</div>
 	</div><!--col-sm-6-->
 
