--- a/publications.html
+++ b/publications.html
@@ -41,9 +41,9 @@ MathJax.Hub.Config({
 
 <h1>Publications and preprints</h1>
 <ul>
-<li><a href="https://arxiv.org/pdf/2002.03758.pdf">A gradient descent perspective on Sinkhorn</a>. 2020. </li>
+<li><a href="https://arxiv.org/pdf/2002.03758.pdf">A gradient descent perspective on Sinkhorn</a>. Accepted in <em>Appl. Math. Opt.</em>, 2020. </li>
 
-<li> Matt Jacobs and Flavien Léger. <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a>. 2019. Submitted.</li>
+<li> Matt Jacobs and Flavien Léger. <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a>. Accepted in <em>SIAM J. Optim.</em>, 2019.</li>
 
 <li>Flavien Léger and Wuchen Li. <a href="https://arxiv.org/pdf/1901.09051.pdf">Hopf–Cole transformation via generalized Schrödinger bridge problem</a>. 2019. Submitted.</li>
 
