--- a/publications.html
+++ b/publications.html
@@ -41,6 +41,8 @@ MathJax.Hub.Config({
 
 <h1>Publications and preprints</h1>
 <ul>
+<li>L. Chizat, P. Roussillon, F. Léger, F-X. Vialard, G. Peyré. <a href="https://arxiv.org/pdf/2006.08172.pdf">Faster Wasserstein Distance Estimation with the Sinkhorn Divergence</a>. 2020. </li>
+
 <li><a href="https://arxiv.org/pdf/2002.03758.pdf">A gradient descent perspective on Sinkhorn</a>. Accepted in <em>Appl. Math. Opt.</em>, 2020. </li>
 
 <li> Matt Jacobs and Flavien Léger. <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a>. Accepted in <em>SIAM J. Optim.</em>, 2019.</li>
