--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ MathJax.Hub.Config({
 		<span class="glyphicon glyphicon-briefcase"></span>
 	</div>
 	<div class="media-body">
-		Postdoc at ENS Paris
+		Postdoc at Sciences Po
 	</div>
 </div>
 
