--- a/publications.html
+++ b/publications.html
@@ -43,11 +43,11 @@ MathJax.Hub.Config({
 <ul>
 <li>L. Chizat, P. Roussillon, F. Léger, F-X. Vialard, G. Peyré. <a href="https://arxiv.org/pdf/2006.08172.pdf">Faster Wasserstein Distance Estimation with the Sinkhorn Divergence</a>. 2020. </li>
 
-<li><a href="https://arxiv.org/pdf/2002.03758.pdf">A gradient descent perspective on Sinkhorn</a>. Accepted in <em>Appl. Math. Opt.</em>, 2020. </li>
+<li><a href="https://arxiv.org/pdf/2002.03758.pdf">A gradient descent perspective on Sinkhorn</a>. <em>Appl. Math. Opt.</em>, 2020. </li>
 
-<li> Matt Jacobs and Flavien Léger. <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a>. Accepted in <em>SIAM J. Optim.</em>, 2019.</li>
+<li> Matt Jacobs and Flavien Léger. <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a>. <em>Numerische Mathematik</em> (2020): 1-32</li>
 
-<li>Flavien Léger and Wuchen Li. <a href="https://arxiv.org/pdf/1901.09051.pdf">Hopf–Cole transformation via generalized Schrödinger bridge problem</a>. 2019. Submitted.</li>
+<li>Flavien Léger and Wuchen Li. <a href="https://arxiv.org/pdf/1901.09051.pdf">Hopf–Cole transformation via generalized Schrödinger bridge problem</a>. <em>Journal of Differential Equations</em>, 2020. </li>
 
 <li><a href="http://www.math.ucla.edu/~majaco/">Matt Jacobs</a>, Flavien Léger, <a href="http://www.math.ucla.edu/~wcli/">Wuchen Li</a> and Stanley Osher. <a href="https://arxiv.org/pdf/1805.09453.pdf">Solving large-scale optimization problems with a convergence rate independent of grid size</a>. <em>SIAM J. Numer. Anal.</em> 57, 2019.</li>
 
