--- a/optimal-transport.html
+++ b/optimal-transport.html
@@ -61,6 +61,13 @@ MathJax.Hub.Config({
 <p>This page illustrates the method proposed in: <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a> <a href="#ref2">[2]</a>. 
 </p>
 
+
+
+<h2>Code</h2>
+<p>The code used in the paper is <a href="https://github.com/Math-Jacobs/bfm">available on GitHub</a>.</p>
+
+
+
 <h2>Videos</h2>
 
 <p>The following videos illustrate displacement interpolation between two probability densities.
@@ -210,8 +217,6 @@ MathJax.Hub.Config({
 </div><!--row-->
 
 
-<h2>Software</h2>
-<p>Coming soon.</p>
 
 <h2>References</h2>
 <p id="ref1">
