--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@ MathJax.Hub.Config({
 
 <li>Flavien Léger and Wuchen Li. <a href="https://arxiv.org/pdf/1901.09051.pdf">Hopf–Cole transformation via generalized Schrödinger bridge problem</a>. <em>Journal of Differential Equations</em>, 2020. </li>
 
-<li><a href="http://www.math.ucla.edu/~majaco/">Matt Jacobs</a>, Flavien Léger, <a href="http://www.math.ucla.edu/~wcli/">Wuchen Li</a> and Stanley Osher. <a href="https://arxiv.org/pdf/1805.09453.pdf">Solving large-scale optimization problems with a convergence rate independent of grid size</a>. <em>SIAM J. Numer. Anal.</em> 57, 2019.</li>
+<li><a href="http://www.math.ucla.edu/~majaco/">Matt Jacobs</a>, Flavien Léger, Wuchen Li and Stanley Osher. <a href="https://arxiv.org/pdf/1805.09453.pdf">Solving large-scale optimization problems with a convergence rate independent of grid size</a>. <em>SIAM J. Numer. Anal.</em> 57, 2019.</li>
 
 <li><a href="https://arxiv.org/pdf/1703.10243.pdf">A geometric perspective on regularized optimal transport</a>. <em>J. Dyn. Diff. Equat.</em>, 2018.</li>
 
