--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,9 @@ MathJax.Hub.Config({
 
 <h1>Publications and preprints</h1>
 <ul>
-<li>L. Chizat, P. Roussillon, F. Léger, F-X. Vialard, G. Peyré. <a href="https://arxiv.org/pdf/2006.08172.pdf">Faster Wasserstein Distance Estimation with the Sinkhorn Divergence</a>. 2020. </li>
+<li> Matt Jacobs, <a href="https://www.math.ucla.edu/~wlee">Wonjun Lee</a> and Flavien Léger. <a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a>. Submitted, 2020. </li>
+
+<li>L. Chizat, P. Roussillon, F. Léger, F-X. Vialard, G. Peyré. <a href="https://arxiv.org/pdf/2006.08172.pdf">Faster Wasserstein Distance Estimation with the Sinkhorn Divergence</a>. <em>In Proc. NeurIPS'20</em>, 2020. </li>
 
 <li><a href="https://arxiv.org/pdf/2002.03758.pdf">A gradient descent perspective on Sinkhorn</a>. <em>Appl. Math. Opt.</em>, 2020. </li>
 
