added gf videos

--- a/optimal-transport.html
+++ b/optimal-transport.html
@@ -128,6 +128,7 @@ MathJax.Hub.Config({
 		</div>
 	</div><!--col-sm-6-->
 
+</div><!--row-->
 
 <h2>Caffarelli's counterexample</h2>
 <p>In <a href="#ref1">[1]</a> Caffarelli showed that the optimal transport map can be discontinuous when a measure is supported on a non-convex domain.
@@ -223,7 +224,7 @@ MathJax.Hub.Config({
 [1] Luis A. Caffarelli. The regularity of mappings with a convex potential. J. Amer. Math. Soc. 5, 1 (1992), 99–104.
 </p>
 <p id="ref2">
-[2] Matt Jacobs and Flavien Léger. <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a>. 2019.
+[2] Matt Jacobs and Flavien Léger. <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a>. <em>Numerische Mathematik</em> (2020): 1-32.
 </p>
 <p id="ref3">
 [3] Filippo Santambrogio and Xu-Jia Wang. Convexity of the support of the displacement interpolation: Counterexamples. Appl. Math. Letters 58 (2016), 152–158.
