--- a/gradient-flows.html
+++ b/gradient-flows.html
@@ -57,22 +57,40 @@ MathJax.Hub.Config({
 
 
 <h1>Wasserstein gradient flows</h1>
-<p>The back-and-forth method <a href="#ref2">[2]</a> can be generalized to compute <em>Wasserstein gradient flows</em> <a href="#ref1">[1]</a>, via the so-called JKO scheme <a href="#ref3">[3]</a>. This allows to efficiently solve a large class of interesting PDEs.
+<p>This page illustrates the method proposed in <a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a> <a href="#ref1">[1]</a>. The back-and-forth method in optimal transport <a href="#ref2">[2]</a> can be generalized to compute <em>Wasserstein gradient flows</em>, via the JKO scheme <a href="#ref3">[3]</a>. This allows to efficiently solve the PDEs
+\begin{align*}  
+\partial_t\rho - \mathrm{div}(\rho\nabla\phi) = 0, \\
+\phi = \delta U(\rho),
+\end{align*}
+for a large class of interesting energies $U(\rho)$. We consider the following energies:
+
+<ul>
+<li><a href="#pme">(The porous medium equation)</a> Slow diffusion energies 
+$$
+U(\rho) = \int_{\mathbb{R}^2} u_m(\rho(x)) + V(x)\,dx,
+$$ 
+where $u_m(\rho) = \gamma \rho(x)^m$ for $m>1$ and $\gamma>0$. Here $V\colon\mathbb{R}^2\to[0,\infty]$ is a potential function.</li>
+
+<li><a href="#incompressible">(The incompressible limit)</a> Congestion energies 
+$$
+U(\rho) = \int_{\mathbb{R}^2} u_{\infty}(\rho(x)) + V(x)\,dx,
+$$ 
+where $u_\infty(\rho)=0$ if $0\le \rho \le 1$ and $\infty$ otherwise.</li>
+
+<li><a href="#aggregation">(An aggregation-diffusion equation)</a> Convex-concave energies 
+$$
+U(\rho) = \int_{\mathbb{R}^2} u_m(\rho(x))\,dx + \iint_{\mathbb{R}^2\times \mathbb{R}^2} W(x-y)\rho(x)\rho(y)\,dxdy,
+$$ 
+where $W$ is convex interaction kernel. Note that the first term in convex in $\rho$ while the second term is concave in $\rho$. 
+</li>
+</ul>
 </p>
 
-<p>
-Let $\Omega=[0,1]^2$, we consider below various functionals $U(\rho)$ (both convex and convex+concave). 
-</p>
 
 
+<h2 id="pme">Porous medium equation</h2>
 
-<h2>Porous medium equation</h2>
-
-<p>Let
-\begin{equation*}
-U(\rho) = \frac{\gamma}{m-1}\int_\Omega\rho(x)^m\,dx + \int_\Omega V(x)\,\rho(x)\,dx,
-\end{equation*}
-where $V\colon\mathbb{R}^2\to\mathbb{R}\cup\{+\infty\}$ is a potential energy. The Wasserstein gradient flow of $U$ is the PDE
+<p>The Wasserstein gradient flow of $U(\rho)=\int_{\mathbb{R}^2} u_m(\rho(x)) + V(x)\,dx$ is the advection slow diffusion equation
 $$
 \partial_t\rho +\mathrm{div}(\rho (-\nabla V))= \gamma\Delta \rho^m,
 $$
@@ -82,35 +100,94 @@ together with Neumann boundary conditions and an initial condition $\rho(0,\cdot
 <div class="row">
 		<div class="col-sm-6">
 		<div class="thumbnail">
-			<video controls poster="resources/ucla/gf/star-obstacle.png">
-				<source src="resources/ucla/gf/star-obstacle.mp4" type="video/mp4">
+			<video controls>
+				<source src="resources/gf/quadratic-potential-star-obstacle-m-4.mp4" type="video/mp4">
 			</video>
-		<div class="caption">Here $V(x)=\iota_{S}(x)+\frac{1}{2}\lVert x-a \rVert^2$, where $S$ is the star domain and $a$ the lower right corner.</div>
+		<div class="caption">A star-shaped obstacle (in white). Here $m=4$ and $V(x)=\lVert x-a\rVert^2$, $a=(0.9, 0.9)$.</div>
 		</div>
 	</div><!--col-sm-6-->
+
+	<div class="col-sm-6">
+		<div class="thumbnail">
+			<video controls>
+				<source src="resources/gf/sine-potential-m-2.mp4" type="video/mp4">
+			</video>
+		<div class="caption">A nonconvex potential $V(x_1, x_2)=\sin(5\pi x_1)\sin(3\pi x_2)$, with $m=2$.</div>
+		</div>
+	</div><!--col-sm-6-->
+	
 </div><!--row-->
 
 
 
-<h2>Incompressible case</h2>
 
-<h2>Heat equation</h2>
-<p>Here are a few examples of gradient flows of the functional
-\begin{equation}
-U(\rho) = \gamma\int\rho(x) \ln\rho(x)\,dx + \int V(x)\,\rho(x)\,dx,
-\end{equation}
-where $V\colon\mathbb{R}^2\to\mathbb{R}\cup\{+\infty\}$ is a potential energy.
-</p>
+<h2 id="incompressible">Incompressible limit</h2>
+
+<div class="row">
+		<div class="col-sm-6">
+		<div class="thumbnail">
+			<video controls>
+				<source src="resources/gf/incompressible-oneball.mp4" type="video/mp4">
+			</video>
+		<div class="caption">A disk obstacle (in white), with $V(x)=\lVert x-a\rVert^2$, $a=(0.9, 0.9)$.</div>
+		</div>
+	</div><!--col-sm-6-->
+
+	<div class="col-sm-6">
+		<div class="thumbnail">
+			<video controls>
+				<source src="resources/gf/incompressible-fourballs.mp4" type="video/mp4">
+			</video>
+		<div class="caption">A four-disk obstacle, with $V(x)=\lVert x-a\rVert^2$, $a=(0.9, 0.9)$.</div>
+		</div>
+	</div><!--col-sm-6-->
+	
+</div><!--row-->
+
+
+
+<h2>Aggregation-diffusion equations</h2>
+Consider the energy
+$$
+U(\rho) = \int_{\mathbb{R}^2} u_m(\rho(x))\,dx + \iint_{\mathbb{R}^2\times \mathbb{R}^2} \lVert x-y\rVert^2\rho(x)\rho(y)\,dxdy.
+$$
+The second term encourages aggregation and is concave with respect to $\rho$. 
+
+<div class="row">
+		<div class="col-sm-6">
+		<div class="thumbnail">
+			<video controls>
+				<source src="resources/gf/aggregation1.mp4" type="video/mp4">
+			</video>
+		<div class="caption">Here $m=2$.</div>
+		</div>
+	</div><!--col-sm-6-->
+
+	<div class="col-sm-6">
+		<div class="thumbnail">
+			<video controls>
+				<source src="resources/gf/aggregation3d.mp4" type="video/mp4">
+			</video>
+		<div class="caption">3D view.</div>
+		</div>
+	</div><!--col-sm-6-->
+	
+</div><!--row-->
+
+
+
 
 <h2>References</h2>
 <p id="ref1">
-[1] Matt Jacobs, Wonjun Lee and Flavien Léger. The back-and-forth method for Wasserstein gradient flows, in progress.
+[1] Matt Jacobs, Wonjun Lee and Flavien Léger. <a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a>. 2020.
 </p>
+
 <p id="ref2">
-[2] Matt Jacobs and Flavien Léger. <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a>. 2019.
+[2] Matt Jacobs and Flavien Léger. <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a>. <em>Numerische Mathematik</em> (2020): 1-32.
 </p>
+
 <p id="ref3">
-[3] Richard Jordan and David Kinderlehrer and Felix Otto .The variational formulation of the Fokker-Planck equation. SIAM journal on mathematical analysis 29.1 (1998): 1–17.
+[3] Richard Jordan and David Kinderlehrer and Felix Otto. The variational formulation of the Fokker-Planck equation. SIAM journal on mathematical analysis 29.1 (1998): 1–17.
 </p>
 
 
