added code for WGF

--- a/gradient-flows.html
+++ b/gradient-flows.html
@@ -88,6 +88,11 @@ where $W$ is convex interaction kernel. Note that the first term in convex in $\
 
 
 
+<h2>Code</h2>
+<p>The code used in the paper is <a href="https://github.com/wonjunee/wgfBFMcodes">available on GitHub</a>. The documentation is <a href="https://wasserstein-gradient-flows.netlify.app">available here</a>.</p>
+
+
+
 <h2 id="pme">Porous medium equation</h2>
 
 <p>The Wasserstein gradient flow of $U(\rho)=\int_{\mathbb{R}^2} u_m(\rho(x)) + V(x)\,dx$ is the advection slow diffusion equation
