--- a/publications.html
+++ b/publications.html
@@ -41,13 +41,13 @@ MathJax.Hub.Config({
 
 <h1>Publications and preprints</h1>
 <ul>
-<li> Matt Jacobs, <a href="https://www.math.ucla.edu/~wlee">Wonjun Lee</a> and Flavien Léger. <a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a>. Submitted, 2020. </li>
+<li> Matt Jacobs, <a href="https://www.math.ucla.edu/~wlee">Wonjun Lee</a> and Flavien Léger. <a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a>. Submitted, 2020. <a href="https://github.com/wonjunee/wgfBFMcodes">Code (GitHub)</a>. <a href="https://slides.com/flavienleger/wasserstein-gradient-flows">Slides</a>.</li>
 
 <li>L. Chizat, P. Roussillon, F. Léger, F-X. Vialard, G. Peyré. <a href="https://arxiv.org/pdf/2006.08172.pdf">Faster Wasserstein Distance Estimation with the Sinkhorn Divergence</a>. <em>In Proc. NeurIPS'20</em>, 2020. </li>
 
 <li><a href="https://arxiv.org/pdf/2002.03758.pdf">A gradient descent perspective on Sinkhorn</a>. <em>Appl. Math. Opt.</em>, 2020. </li>
 
-<li> Matt Jacobs and Flavien Léger. <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a>. <em>Numerische Mathematik</em> (2020): 1-32</li>
+<li> Matt Jacobs and Flavien Léger. <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a>. <em>Numerische Mathematik</em> (2020): 1-32. <a href="https://github.com/Math-Jacobs/bfm">Code (GitHub)</a>. <a href="https://slides.com/flavienleger/backandforth">Slides</a>.</li>
 
 <li>Flavien Léger and Wuchen Li. <a href="https://arxiv.org/pdf/1901.09051.pdf">Hopf–Cole transformation via generalized Schrödinger bridge problem</a>. <em>Journal of Differential Equations</em>, 2020. </li>
 
