--- a/optimal-transport.html
+++ b/optimal-transport.html
@@ -64,7 +64,8 @@ MathJax.Hub.Config({
 
 
 <h2>Code</h2>
-<p>The code used in the paper is <a href="https://github.com/Math-Jacobs/bfm">available on GitHub</a>.</p>
+<p>The code used in the paper is <a href="https://github.com/Math-Jacobs/bfm">available on GitHub</a>. Documentation <a href="https://back-and-forth.netlify.app/">available here</a>.
+</p>
 
 
 
