--- a/slides.html
+++ b/slides.html
@@ -41,6 +41,13 @@ MathJax.Hub.Config({
 
 <h1>Slides of some selected talks</h1>
 
+<h3>MokaMeetings (jan 2021)</h3>
+<p>
+<a href="https://slides.com/flavienleger/wasserstein-gradient-flows">The back-and-forth method for Wasserstein gradient flows</a>
+</p>
+
+
+
 <h3>MokaMeetings (apr 2020)</h3>
 <p>
 <a href="https://slides.com/flavienleger/backandforth">The back-and-forth method</a>
