New monopolist section; deleted Other

--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@ MathJax.Hub.Config({
 
 <li><a href="teaching.html">Teaching</a></li>
 
-<li><a href="other.html">Other</a></li>
-
 </ul>
 
 
@@ -76,7 +74,17 @@ MathJax.Hub.Config({
 	</div>
 	<div class="media-body">
 		
-		Research interests: optimal transport, PDEs and fluid mechanics.
+		Research interests: optimal transport and economic applications, numerical optimization, PDEs.
+	</div>
+</div>
+
+
+<div class="media">
+	<div class="media-left media-middle">
+		<span class="glyphicon glyphicon-file"></span>
+	</div>
+	<div class="media-body">
+		My <a href="resources/vita.pdf">CV</a>
 	</div>
 </div>
 
@@ -93,10 +101,11 @@ MathJax.Hub.Config({
 
 <div class="media">
 	<div class="media-left media-middle">
-		<span class="glyphicon glyphicon-file"></span>
+		
+		<span class="glyphicon glyphicon-certificate"></span>
 	</div>
 	<div class="media-body">
-		My <a href="resources/vita.pdf">CV</a>
+		My <a href="https://github.com/flavienleger">GitHub</a>
 	</div>
 </div>
 </div><!--col-xs-12 col-md-8-->
