--- a/optimal-transport.html
+++ b/optimal-transport.html
@@ -34,8 +34,6 @@ MathJax.Hub.Config({
 
 <li><a href="teaching.html">Teaching</a></li>
 
-<li><a href="other.html">Other</a></li>
-
 </ul>
 
 
@@ -46,6 +44,8 @@ MathJax.Hub.Config({
 <li class="active"><a href="optimal-transport.html">Optimal Transport</a></li>
 
 <li><a href="gradient-flows.html">Gradient Flows</a></li>
+
+<li><a href="monopolist.html">Monopolist</a></li>
 
 <li><a href="sinkhorn.html">Sinkhorn</a></li>
 
@@ -139,14 +139,14 @@ MathJax.Hub.Config({
 	<div class="col-sm-6">
 		<div class="thumbnail">
 			<a href="resources/ucla/ot/caffarelli/xMap_plasma_4096.png" class="thumbnail"><img src="resources/ucla/ot/caffarelli/xMap_plasma_4096.png" alt="Caffarelli's xMap"></a>
-	<div class="caption">Support of the initial density. Colors represent the mapping from initial density to final density.</div>
+	<div class="caption">Support of the initial density. <strong>The colors indicate the mapping from the initial density to the final density.</strong></div>
 		</div>
 	</div><!--col-sm-6-->
 	
 	<div class="col-sm-6">
 		<div class="thumbnail">
 			<a href="resources/ucla/ot/caffarelli/x_plasma_4096.png" class="thumbnail"><img src="resources/ucla/ot/caffarelli/x_plasma_4096.png" alt="Caffarelli's xMap"></a>
-	<div class="caption">Support of the final density.</div>
+	<div class="caption">Support of the final density with matching colors.</div>
 		</div>
 	</div><!--col-sm-6-->
 </div><!--row-->
