--- a/sinkhorn.html
+++ b/sinkhorn.html
@@ -34,8 +34,6 @@ MathJax.Hub.Config({
 
 <li><a href="teaching.html">Teaching</a></li>
 
-<li><a href="other.html">Other</a></li>
-
 </ul>
 
 
@@ -46,6 +44,8 @@ MathJax.Hub.Config({
 <li><a href="optimal-transport.html">Optimal Transport</a></li>
 
 <li><a href="gradient-flows.html">Gradient Flows</a></li>
+
+<li><a href="monopolist.html">Monopolist</a></li>
 
 <li class="active"><a href="sinkhorn.html">Sinkhorn</a></li>
 
