added notebook link

--- a/optimal-transport.html
+++ b/optimal-transport.html
@@ -67,6 +67,9 @@ MathJax.Hub.Config({
 <p>The code used in the paper is <a href="https://github.com/Math-Jacobs/bfm">available on GitHub</a>. Documentation <a href="https://back-and-forth.netlify.app/">available here</a>.
 </p>
 
+<p><span class="glyphicon glyphicon-hand-right"></span> The simplest way to use the code is to run <a href="https://colab.research.google.com/drive/1Uml2n4MIVDZnviEHEMFrJIdMwYDOPHax?usp=sharing">this Jupyter notebook on Google Colab</a>. Or <a href="https://github.com/Math-Jacobs/bfm/blob/main/python/example.ipynb">see it on GitHub</a>. 
+</p>
+
 
 
 <h2>Videos</h2>
