--- a/monopolist.html
+++ b/monopolist.html
@@ -115,8 +115,8 @@ And the outside option is located at $y_0=0$.
 		<div class="thumbnail">
 			
       <video controls>
-				
-        <source src="resources/monopolist/rho3d.mp4" type="video/mp4">
+		<source src="resources/monopolist/rho3d.mp4#t=0.1" type="video/mp4">
+        
 			</video>
 		<div class="caption">Detail of the density of products $T_{v\#}\mu$ that highlights the low-dimensional features.</div>
 		</div>
