--- a/gradient-flows.html
+++ b/gradient-flows.html
@@ -106,7 +106,7 @@ together with Neumann boundary conditions and an initial condition $\rho(0,\cdot
 		<div class="col-sm-6">
 		<div class="thumbnail">
 			<video controls>
-				<source src="resources/gf/quadratic-potential-star-obstacle-m-4.mp4" type="video/mp4">
+				<source src="resources/gf/quadratic-potential-star-obstacle-m-4.mp4#t=0.1" type="video/mp4">
 			</video>
 		<div class="caption">A star-shaped obstacle (in white). Here $m=4$ and $V(x)=\lVert x-a\rVert^2$, $a=(0.9, 0.9)$.</div>
 		</div>
@@ -115,7 +115,7 @@ together with Neumann boundary conditions and an initial condition $\rho(0,\cdot
 	<div class="col-sm-6">
 		<div class="thumbnail">
 			<video controls>
-				<source src="resources/gf/sine-potential-m-2.mp4" type="video/mp4">
+				<source src="resources/gf/sine-potential-m-2.mp4#t=0.1" type="video/mp4">
 			</video>
 		<div class="caption">A nonconvex potential $V(x_1, x_2)=\sin(5\pi x_1)\sin(3\pi x_2)$, with $m=2$.</div>
 		</div>
@@ -132,7 +132,7 @@ together with Neumann boundary conditions and an initial condition $\rho(0,\cdot
 		<div class="col-sm-6">
 		<div class="thumbnail">
 			<video controls>
-				<source src="resources/gf/incompressible-oneball.mp4" type="video/mp4">
+				<source src="resources/gf/incompressible-oneball.mp4#t=0.1" type="video/mp4">
 			</video>
 		<div class="caption">A disk obstacle (in white), with $V(x)=\lVert x-a\rVert^2$, $a=(0.9, 0.9)$.</div>
 		</div>
@@ -141,7 +141,7 @@ together with Neumann boundary conditions and an initial condition $\rho(0,\cdot
 	<div class="col-sm-6">
 		<div class="thumbnail">
 			<video controls>
-				<source src="resources/gf/incompressible-fourballs.mp4" type="video/mp4">
+				<source src="resources/gf/incompressible-fourballs.mp4#t=0.1" type="video/mp4">
 			</video>
 		<div class="caption">A four-disk obstacle, with $V(x)=\lVert x-a\rVert^2$, $a=(0.9, 0.9)$.</div>
 		</div>
@@ -162,7 +162,7 @@ The second term encourages aggregation and is concave with respect to $\rho$.
 		<div class="col-sm-6">
 		<div class="thumbnail">
 			<video controls>
-				<source src="resources/gf/aggregation1.mp4" type="video/mp4">
+				<source src="resources/gf/aggregation1.mp4#t=0.1" type="video/mp4">
 			</video>
 		<div class="caption">Here $m=2$.</div>
 		</div>
@@ -171,7 +171,7 @@ The second term encourages aggregation and is concave with respect to $\rho$.
 	<div class="col-sm-6">
 		<div class="thumbnail">
 			<video controls>
-				<source src="resources/gf/aggregation3d.mp4" type="video/mp4">
+				<source src="resources/gf/aggregation3d.mp4#t=0.1" type="video/mp4">
 			</video>
 		<div class="caption">3D view.</div>
 		</div>
