--- a/gradient-flows.html
+++ b/gradient-flows.html
@@ -105,8 +105,8 @@ together with Neumann boundary conditions and an initial condition $\rho(0,\cdot
 <div class="row">
 		<div class="col-sm-6">
 		<div class="thumbnail">
-			<video controls>
-				<source src="resources/gf/quadratic-potential-star-obstacle-m-4.mp4#t=0.1" type="video/mp4">
+			<video controls poster="resources/gf/quadratic-potential-star-obstacle-m-4.png">
+				<source src="resources/gf/quadratic-potential-star-obstacle-m-4.mp4" type="video/mp4">
 			</video>
 		<div class="caption">A star-shaped obstacle (in white). Here $m=4$ and $V(x)=\lVert x-a\rVert^2$, $a=(0.9, 0.9)$.</div>
 		</div>
@@ -114,8 +114,8 @@ together with Neumann boundary conditions and an initial condition $\rho(0,\cdot
 
 	<div class="col-sm-6">
 		<div class="thumbnail">
-			<video controls>
-				<source src="resources/gf/sine-potential-m-2.mp4#t=0.1" type="video/mp4">
+			<video controls poster="resources/gf/sine-potential-m-2.png">
+				<source src="resources/gf/sine-potential-m-2.mp4" type="video/mp4">
 			</video>
 		<div class="caption">A nonconvex potential $V(x_1, x_2)=\sin(5\pi x_1)\sin(3\pi x_2)$, with $m=2$.</div>
 		</div>
@@ -131,8 +131,8 @@ together with Neumann boundary conditions and an initial condition $\rho(0,\cdot
 <div class="row">
 		<div class="col-sm-6">
 		<div class="thumbnail">
-			<video controls>
-				<source src="resources/gf/incompressible-oneball.mp4#t=0.1" type="video/mp4">
+			<video controls poster="resources/gf/incompressible-oneball.png">
+				<source src="resources/gf/incompressible-oneball.mp4" type="video/mp4">
 			</video>
 		<div class="caption">A disk obstacle (in white), with $V(x)=\lVert x-a\rVert^2$, $a=(0.9, 0.9)$.</div>
 		</div>
@@ -140,8 +140,8 @@ together with Neumann boundary conditions and an initial condition $\rho(0,\cdot
 
 	<div class="col-sm-6">
 		<div class="thumbnail">
-			<video controls>
-				<source src="resources/gf/incompressible-fourballs.mp4#t=0.1" type="video/mp4">
+			<video controls poster="resources/gf/incompressible-fourballs.png">
+				<source src="resources/gf/incompressible-fourballs.mp4" type="video/mp4">
 			</video>
 		<div class="caption">A four-disk obstacle, with $V(x)=\lVert x-a\rVert^2$, $a=(0.9, 0.9)$.</div>
 		</div>
@@ -161,8 +161,8 @@ The second term encourages aggregation and is concave with respect to $\rho$.
 <div class="row">
 		<div class="col-sm-6">
 		<div class="thumbnail">
-			<video controls>
-				<source src="resources/gf/aggregation1.mp4#t=0.1" type="video/mp4">
+			<video controls poster="resources/gf/aggregation1.png">
+				<source src="resources/gf/aggregation1.mp4" type="video/mp4">
 			</video>
 		<div class="caption">Here $m=2$.</div>
 		</div>
@@ -170,8 +170,8 @@ The second term encourages aggregation and is concave with respect to $\rho$.
 
 	<div class="col-sm-6">
 		<div class="thumbnail">
-			<video controls>
-				<source src="resources/gf/aggregation3d.mp4#t=0.1" type="video/mp4">
+			<video controls poster="resources/gf/aggregation3d.png">
+				<source src="resources/gf/aggregation3d.mp4" type="video/mp4">
 			</video>
 		<div class="caption">3D view.</div>
 		</div>
