removed teaching and added phh thesis

--- a/publications.html
+++ b/publications.html
@@ -32,8 +32,6 @@ MathJax.Hub.Config({
 
 <li><a href="slides.html">Slides</a></li>
 
-<li><a href="teaching.html">Teaching</a></li>
-
 </ul>
 
 
@@ -60,6 +58,9 @@ MathJax.Hub.Config({
 
 <li><a href="https://arxiv.org/pdf/1010.4050.pdf">Efficient Matrix Completion with Gaussian Models</a>, with <a href="http://www.cmap.polytechnique.fr/~yu">G. Yu</a> and <a href="http://ece.duke.edu/faculty/guillermo-sapiro">G. Sapiro</a>.  In <em>IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</em>, 2011.</li>
 </ul>
+
+<h1>PhD</h1>
+I completed my PhD in 2017 under the direction of <strong>Nader Masmoudi</strong> and <strong>Alfred Galichon</strong>. My PhD thesis is <a href="https://search.proquest.com/docview/1989784998">available here</a>.
 
 
 </div><!--container-->
