--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ MathJax.Hub.Config({
 		<span class="glyphicon glyphicon-briefcase"></span>
 	</div>
 	<div class="media-body">
-		Postdoc at Sciences Po
+		INRIA Paris, <a href="https://team.inria.fr/mokaplan">MOKAPLAN</a> team
 	</div>
 </div>
 
@@ -71,7 +71,6 @@ MathJax.Hub.Config({
 		<span class="glyphicon glyphicon-eye-open"></span>
 	</div>
 	<div class="media-body">
-		
 		Research interests: optimal transport and economic applications, numerical optimization, PDEs.
 	</div>
 </div>
@@ -92,7 +91,7 @@ MathJax.Hub.Config({
 		<span class="glyphicon glyphicon-envelope"></span>
 	</div>
 	<div class="media-body">
-		<span class="email">flavien<span class="emailobfuscate">leschaussettes</span>leger@<span class="emailobfuscate">de</span>nyu.<span class="emailobfuscate">l'archiduchesse</span>edu</span>
+		<span class="email">flavien<span class="emailobfuscate">leschaussettes</span>.leger@<span class="emailobfuscate">de</span>inria.<span class="emailobfuscate">l'archiduchesse</span>fr</span>
 	</div>
 </div>
 
@@ -109,7 +108,6 @@ MathJax.Hub.Config({
 </div><!--col-xs-12 col-md-8-->
 
 <div class="col-xs-12 col-md-4">
-<!--<img style="float:right" src="images/face.jpg" width="250" height="200" class="img-rounded img-responsive" alt="Portrait">-->
 <img src="images/face.jpg" width="250" height="250" class="img-rounded img-responsive" alt="Portrait">
 </div><!--col-xs-12 col-md-8-->
 
