--- a/gradient-flows.html
+++ b/gradient-flows.html
@@ -182,7 +182,7 @@ The second term encourages aggregation and is concave with respect to $\rho$.
 
 <h2>References</h2>
 <p id="ref1">
-[1] Matt Jacobs, Wonjun Lee and Flavien Léger. <a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a>. 2020.
+[1] Matt Jacobs, Wonjun Lee and Flavien Léger. <a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a>. <em>ESAIM Control Optim. Calc. Var. 27</em> (2021).
 </p>
 
 <p id="ref2">
@@ -190,7 +190,7 @@ The second term encourages aggregation and is concave with respect to $\rho$.
 </p>
 
 <p id="ref3">
-[3] Richard Jordan and David Kinderlehrer and Felix Otto. The variational formulation of the Fokker-Planck equation. SIAM journal on mathematical analysis 29.1 (1998): 1–17.
+[3] Richard Jordan and David Kinderlehrer and Felix Otto. The variational formulation of the Fokker-Planck equation. <em>SIAM journal on mathematical analysis 29.1</em> (1998): 1–17.
 </p>
 
 
