--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@ MathJax.Hub.Config({
 
 <h1>Publications and preprints</h1>
 <ul>
-<li> Matt Jacobs, <a href="https://www.math.ucla.edu/~wlee">Wonjun Lee</a> and Flavien Léger. <a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a>. <em>Accepted in ESAIM: COCV</em>. <a href="https://github.com/wonjunee/wgfBFMcodes">Code (GitHub)</a>. <a href="https://slides.com/flavienleger/wasserstein-gradient-flows">Slides</a>.</li>
+<li> Matt Jacobs, <a href="https://www.math.ucla.edu/~wlee">Wonjun Lee</a> and Flavien Léger. <a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a>. <em> ESAIM Control Optim. Calc. Var. 27</em>, 2021. <a href="https://github.com/wonjunee/wgfBFMcodes">Code (GitHub)</a>. <a href="https://slides.com/flavienleger/wasserstein-gradient-flows">Slides</a>.</li>
 
 <li>L. Chizat, P. Roussillon, F. Léger, F-X. Vialard, G. Peyré. <a href="https://arxiv.org/pdf/2006.08172.pdf">Faster Wasserstein Distance Estimation with the Sinkhorn Divergence</a>. <em>In Proc. NeurIPS'20</em>, 2020. </li>
 
@@ -59,8 +59,7 @@ MathJax.Hub.Config({
 <li><a href="https://arxiv.org/pdf/1010.4050.pdf">Efficient Matrix Completion with Gaussian Models</a>, with <a href="http://www.cmap.polytechnique.fr/~yu">G. Yu</a> and <a href="http://ece.duke.edu/faculty/guillermo-sapiro">G. Sapiro</a>.  In <em>IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</em>, 2011.</li>
 </ul>
 
-<h1>PhD</h1>
-I completed my PhD in 2017 under the direction of <strong>Nader Masmoudi</strong> and <strong>Alfred Galichon</strong>. My PhD thesis is <a href="https://search.proquest.com/docview/1989784998">available here</a>.
+
 
 
 </div><!--container-->
