--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ MathJax.Hub.Config({
 		<span class="glyphicon glyphicon-eye-open"></span>
 	</div>
 	<div class="media-body">
-		Research interests: optimal transport and economic applications, numerical optimization, PDEs.
+		Research interests: optimal transport and applications to economics, geometry and optimization, PDEs.
 	</div>
 </div>
 
