--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@ MathJax.Hub.Config({
 
 <h1>Publications and preprints</h1>
 <ul>
-<li> Pierre-Cyril Aubin-Frankowski, Anna Korba, Flavien Léger. <a href="https://arxiv.org/pdf/2206.08873.pdf">Mirror Descent with Relative Smoothness in Measure Spaces, with application to Sinkhorn and EM</a>. arXiv:2206.08873, 2022.</li>
+<li> Pierre-Cyril Aubin-Frankowski, Anna Korba, Flavien Léger. <a href="https://arxiv.org/pdf/2206.08873.pdf">Mirror Descent with Relative Smoothness in Measure Spaces, with application to Sinkhorn and EM</a>. <em>Advances in Neural Information Processing Systems (NeurIPS)</em>, 2022.</li>
 
 <li> Matt Jacobs, <a href="https://www.math.ucla.edu/~wlee">Wonjun Lee</a> and Flavien Léger. <a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a>. <em> ESAIM Control Optim. Calc. Var. 27</em>, 2021. <a href="https://github.com/wonjunee/wgfBFMcodes">Code (GitHub)</a>. <a href="https://slides.com/flavienleger/wasserstein-gradient-flows">Slides</a>.</li>
 
