--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,7 @@ MathJax.Hub.Config({
 
 <li><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
 
-<li><a href="optimal-transport.html">Research</a></li>
+<li><a href="geometry.html">Research</a></li>
 
 <li class="active"><a href="publications.html">Papers</a></li>
 
