--- a/projects.html
+++ b/projects.html
@@ -24,15 +24,37 @@ MathJax.Hub.Config({
 
 <ul class="nav nav-tabs">
 
-<li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
+<li><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
 
-<li><a href="geometry.html">Research</a></li>
+<li class="active"><a href="geometry.html">Research</a></li>
 
 <li><a href="publications.html">Papers</a></li>
 
 <li><a href="slides.html">Slides</a></li>
 
 </ul>
+
+
+
+
+<ul class="nav nav-pills">
+
+<li class="active"><a href="geometry.html">Kim-McCann Geometry</a></li>
+
+<li><a href="optimal-transport.html">Fast OT</a></li>
+
+<li><a href="gradient-flows.html">Wasserstein Gradient Flows</a></li>
+
+<li><a href="monopolist.html">Monopolist</a></li>
+
+<li><a href="sinkhorn.html">Sinkhorn</a></li>
+
+<li><a href="aggregation.html">Aggregation</a></li>
+
+<li><a href="matrixcompletion.html">Matrix Completion</a></li>
+
+</ul>
+
 
 
 
