--- a/slides.html
+++ b/slides.html
@@ -26,7 +26,7 @@ MathJax.Hub.Config({
 
 <li><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
 
-<li><a href="optimal-transport.html">Research</a></li>
+<li><a href="geometry.html">Research</a></li>
 
 <li><a href="publications.html">Papers</a></li>
 
@@ -35,13 +35,19 @@ MathJax.Hub.Config({
 </ul>
 
 
-<h1>Slides of some selected talks</h1>
+
+<h1>Selected talks</h1>
+
+<h3>Université de Lille, séminaire ANEDP (sept 2022)</h3>
+<p>
+<a href="https://slides.com/flavienleger/z-mappings">Z-mappings for mathematicians</a>
+</p>
+
 
 <h3>MokaMeetings (jan 2021)</h3>
 <p>
 <a href="https://slides.com/flavienleger/wasserstein-gradient-flows">The back-and-forth method for Wasserstein gradient flows</a>
 </p>
-
 
 
 <h3>MokaMeetings (apr 2020)</h3>
@@ -55,11 +61,6 @@ MathJax.Hub.Config({
 <a href="resources/slides_sb_2020jan.key">The Schrödinger bridge problem</a> (Keynote .key file, 20 MB)
 </p>
 
-
-<h3>SIAM Analysis of PDEs (dec 2019)</h3>
-<p>
-<a href="resources/slides_back_and_forth_2019dec.key">Fast optimal transport: the back-and-forth method</a> (Keynote .key file, 28 MB)
-</p>
 
 
 </div><!--container-->
