--- a/geometry.html
+++ b/geometry.html
@@ -24,9 +24,9 @@ MathJax.Hub.Config({
 
 <ul class="nav nav-tabs">
 
-<li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
+<li><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
 
-<li><a href="geometry.html">Research</a></li>
+<li class="active"><a href="geometry.html">Research</a></li>
 
 <li><a href="publications.html">Papers</a></li>
 
@@ -35,6 +35,32 @@ MathJax.Hub.Config({
 </ul>
 
 
+
+
+<ul class="nav nav-pills">
+
+<li class="active"><a href="geometry.html">Kim-McCann Geometry</a></li>
+
+<li><a href="optimal-transport.html">Fast OT</a></li>
+
+<li><a href="gradient-flows.html">Wasserstein Gradient Flows</a></li>
+
+<li><a href="monopolist.html">Monopolist</a></li>
+
+<li><a href="sinkhorn.html">Sinkhorn</a></li>
+
+<li><a href="aggregation.html">Aggregation</a></li>
+
+<li><a href="matrixcompletion.html">Matrix Completion</a></li>
+
+</ul>
+
+
+
+<h1>Embeddings in the Kim-McCann geometry</h1>
+<h2>Summary</h2>
+
+Let $(X,Y,c)$ be a triplet such that $X$ and $Y$ are two $d$-dimensional manifolds and $c(x,y)$, $x\in X,y\in Y$ is a real-valued function (the "cost function"). 
 
 
 
