--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,8 @@ MathJax.Hub.Config({
 
 <h1>Publications and preprints</h1>
 <ul>
+<li>Flavien Léger, Francois-Xavier Vialard. <a href="papers/Geometric_Laplace.pdf">A geometric Laplace expansion</a>.</li>
+
 <li> Pierre-Cyril Aubin-Frankowski, Anna Korba, Flavien Léger. <a href="https://arxiv.org/pdf/2206.08873.pdf">Mirror Descent with Relative Smoothness in Measure Spaces, with application to Sinkhorn and EM</a>. <em>Advances in Neural Information Processing Systems (NeurIPS)</em>, 2022.</li>
 
 <li> Matt Jacobs, <a href="https://www.math.ucla.edu/~wlee">Wonjun Lee</a> and Flavien Léger. <a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a>. <em> ESAIM Control Optim. Calc. Var. 27</em>, 2021. <a href="https://github.com/wonjunee/wgfBFMcodes">Code (GitHub)</a>. <a href="https://slides.com/flavienleger/wasserstein-gradient-flows">Slides</a>.</li>
