--- a/publications2.html
+++ b/publications2.html
@@ -24,11 +24,11 @@ MathJax.Hub.Config({
 
 <ul class="nav nav-tabs">
 
-<li><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
+<li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
 
-<li><a href="optimal-transport.html">Research</a></li>
+<li><a href="geometry.html">Research</a></li>
 
-<li class="active"><a href="publications.html">Papers</a></li>
+<li><a href="publications.html">Papers</a></li>
 
 <li><a href="slides.html">Slides</a></li>
 
