--- a/sinkhorn.html
+++ b/sinkhorn.html
@@ -26,7 +26,7 @@ MathJax.Hub.Config({
 
 <li><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
 
-<li class="active"><a href="optimal-transport.html">Research</a></li>
+<li class="active"><a href="geometry.html">Research</a></li>
 
 <li><a href="publications.html">Papers</a></li>
 
@@ -39,9 +39,11 @@ MathJax.Hub.Config({
 
 <ul class="nav nav-pills">
 
-<li><a href="optimal-transport.html">Optimal Transport</a></li>
+<li><a href="geometry.html">Kim-McCann Geometry</a></li>
 
-<li><a href="gradient-flows.html">Gradient Flows</a></li>
+<li><a href="optimal-transport.html">Fast OT</a></li>
+
+<li><a href="gradient-flows.html">Wasserstein Gradient Flows</a></li>
 
 <li><a href="monopolist.html">Monopolist</a></li>
 
