Update paper presentation

--- a/index.html
+++ b/index.html
@@ -49,7 +49,19 @@ MathJax.Hub.Config({
 		<span class="glyphicon glyphicon-briefcase"></span>
 	</div>
 	<div class="media-body">
-		INRIA Paris, <a href="https://team.inria.fr/mokaplan">MOKAPLAN</a> team
+		INRIA Paris, <a href="https://team.inria.fr/mokaplan">MOKAPLAN</a> team <br>
+		My office is A427.
+	</div>
+</div>
+
+
+
+<div class="media">
+	<div class="media-left media-middle">
+		<span class="glyphicon glyphicon-eye-open"></span>
+	</div>
+	<div class="media-body">
+		Research interests: optimal transport and applications to economics, geometry and optimization, PDEs.
 	</div>
 </div>
 
@@ -66,14 +78,6 @@ MathJax.Hub.Config({
 </div>
 
 
-<div class="media">
-	<div class="media-left media-middle">
-		<span class="glyphicon glyphicon-eye-open"></span>
-	</div>
-	<div class="media-body">
-		Research interests: optimal transport and applications to economics, geometry and optimization, PDEs.
-	</div>
-</div>
 
 
 <div class="media">
