--- a/publications.html
+++ b/publications.html
@@ -36,31 +36,113 @@ MathJax.Hub.Config({
 
 
 <h1>Publications and preprints</h1>
+
+<h2>2022</h2>
+
 <ul>
-<li>Flavien Léger, Francois-Xavier Vialard. <a href="papers/Geometric_Laplace.pdf">A geometric Laplace expansion</a>.</li>
-
-<li> Pierre-Cyril Aubin-Frankowski, Anna Korba, Flavien Léger. <a href="https://arxiv.org/pdf/2206.08873.pdf">Mirror Descent with Relative Smoothness in Measure Spaces, with application to Sinkhorn and EM</a>. <em>Advances in Neural Information Processing Systems (NeurIPS)</em>, 2022.</li>
-
-<li> Matt Jacobs, <a href="https://www.math.ucla.edu/~wlee">Wonjun Lee</a> and Flavien Léger. <a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a>. <em> ESAIM Control Optim. Calc. Var. 27</em>, 2021. <a href="https://github.com/wonjunee/wgfBFMcodes">Code (GitHub)</a>. <a href="https://slides.com/flavienleger/wasserstein-gradient-flows">Slides</a>.</li>
-
-<li>L. Chizat, P. Roussillon, F. Léger, F-X. Vialard, G. Peyré. <a href="https://arxiv.org/pdf/2006.08172.pdf">Faster Wasserstein Distance Estimation with the Sinkhorn Divergence</a>. <em>In Proc. NeurIPS'20</em>, 2020. </li>
-
-<li><a href="https://arxiv.org/pdf/2002.03758.pdf">A gradient descent perspective on Sinkhorn</a>. <em>Appl. Math. Opt.</em>, 2020. </li>
-
-<li> Matt Jacobs and Flavien Léger. <a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a>. <em>Numerische Mathematik</em> (2020): 1-32. <a href="https://github.com/Math-Jacobs/bfm">Code (GitHub)</a>. <a href="https://slides.com/flavienleger/backandforth">Slides</a>.</li>
-
-<li>Flavien Léger and Wuchen Li. <a href="https://arxiv.org/pdf/1901.09051.pdf">Hopf–Cole transformation via generalized Schrödinger bridge problem</a>. <em>Journal of Differential Equations</em>, 2020. </li>
-
-<li><a href="http://www.math.ucla.edu/~majaco/">Matt Jacobs</a>, Flavien Léger, Wuchen Li and Stanley Osher. <a href="https://arxiv.org/pdf/1805.09453.pdf">Solving large-scale optimization problems with a convergence rate independent of grid size</a>. <em>SIAM J. Numer. Anal.</em> 57, 2019.</li>
-
-<li><a href="https://arxiv.org/pdf/1703.10243.pdf">A geometric perspective on regularized optimal transport</a>. <em>J. Dyn. Diff. Equat.</em>, 2018.</li>
-
-<li><a href="https://arxiv.org/pdf/1604.00907.pdf">A new approach to bounds on mixing</a>. <em>Math. Models Methods Appl. Sci.</em>, 28(5):829–849, 2018. <a href="resources/cims/talk-mixing.pdf">Slides (PDF)</a> 
+<li>
+    <b><a href="papers/Geometric_Laplace.pdf">A geometric Laplace expansion</a></b> <br>
+    Flavien Léger and François-Xavier Vialard. <br>
+    2022.
 </li>
 
-<li><a href="https://www.math.ucla.edu/~bertozzi/papers/Patch-Galley.pdf">Aggregation via the Newtonian potential and aggregation patches</a>, with <a href="http://www.math.ucla.edu/~bertozzi">A. Bertozzi</a> and <a href="http://thomaslaurent.lmu.build/homepage.html">T. Laurent</a>.  <em>M3AS</em>, vol. 22, Supp. 1, 2012.</li>
 
-<li><a href="https://arxiv.org/pdf/1010.4050.pdf">Efficient Matrix Completion with Gaussian Models</a>, with <a href="http://www.cmap.polytechnique.fr/~yu">G. Yu</a> and <a href="http://ece.duke.edu/faculty/guillermo-sapiro">G. Sapiro</a>.  In <em>IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</em>, 2011.</li>
+
+<li> 
+    <b><a href="https://arxiv.org/pdf/2206.08873.pdf">Mirror Descent with Relative Smoothness in Measure Spaces, with application to Sinkhorn and EM</a></b> <br>
+    Pierre-Cyril Aubin-Frankowski, Anna Korba and Flavien Léger. <br>
+    <em>Advances in Neural Information Processing Systems (NeurIPS)</em>, 2022.
+</li>
+</ul>
+
+<h2>2019-2021</h2>
+<ul>
+<li>
+    <b><a href="https://arxiv.org/pdf/2011.08151.pdf">The back-and-forth method for Wasserstein gradient flows</a></b> <br>
+    Matt Jacobs, Wonjun Lee and Flavien Léger. <br>
+    <em> ESAIM Control Optim. Calc. Var. 27</em>, 2021. <br>
+    [<a href="https://github.com/wonjunee/wgfBFMcodes">Code</a>] [<a href="https://slides.com/flavienleger/wasserstein-gradient-flows">Slides</a>]
+</li>
+
+
+
+<li>
+    <b><a href="https://arxiv.org/pdf/2006.08172.pdf">Faster Wasserstein Distance Estimation with the Sinkhorn Divergence</a></b> <br> 
+    Lénaïc Chizat, Pierre Roussillon, Flavien Léger, François-Xavier Vialard and Gabriel Peyré. <br> 
+    <em>In Proc. NeurIPS'20</em>, 2020.
+</li>
+
+
+
+<li>
+    <b><a href="https://arxiv.org/pdf/2002.03758.pdf">A gradient descent perspective on Sinkhorn</a></b> <br> 
+    Flavien Léger. <br> 
+    <em>Appl. Math. Opt.</em>, 2020.
+</li>
+
+
+
+<li>
+    <b><a href="https://arxiv.org/pdf/1905.12154.pdf">A fast approach to optimal transport: The back-and-forth method</a></b> <br> 
+    Matt Jacobs and Flavien Léger. <br> 
+    <em>Numerische Mathematik</em> (2020): 1-32. <br>
+    [<a href="https://github.com/Math-Jacobs/bfm">Code</a>] [<a href="https://slides.com/flavienleger/backandforth">Slides</a>]
+</li>
+
+
+
+<li>
+    <b><a href="https://arxiv.org/pdf/1901.09051.pdf">Hopf–Cole transformation via generalized Schrödinger bridge problem</a></b> <br>
+    Flavien Léger and Wuchen Li. <br>
+    <em>Journal of Differential Equations</em>, 2020. 
+</li>
+
+
+
+<li>
+    <b><a href="https://arxiv.org/pdf/1805.09453.pdf">Solving large-scale optimization problems with a convergence rate independent of grid size</a></b> <br>
+    Matt Jacobs Flavien Léger, Wuchen Li and Stanley Osher. <br>
+    <em>SIAM J. Numer. Anal.</em> 57, 2019.
+</li>
+</ul>
+
+<h2>2011-2018</h2>
+<ul>
+<li>
+    <b><a href="https://arxiv.org/pdf/1703.10243.pdf">A geometric perspective on regularized optimal transport</a></b> <br>
+    Flavien Léger. <br>
+    <em>J. Dyn. Diff. Equat.</em>, 2018.
+</li>
+
+
+
+<li>
+    <b><a href="https://arxiv.org/pdf/1604.00907.pdf">A new approach to bounds on mixing</a></b> <br>
+    Flavien Léger. <br>
+    <em>Math. Models Methods Appl. Sci.</em>, 28(5):829–849, 2018. <br>
+    <a href="resources/cims/talk-mixing.pdf">Slides (PDF)</a> 
+</li>
+
+
+
+<li>
+    <b><a href="https://www.math.ucla.edu/~bertozzi/papers/Patch-Galley.pdf">Aggregation via the Newtonian potential and aggregation patches</a></b> <br>
+    Andrea Bertozzi, Thomas Laurent and Flavien Léger. <br>
+    <em>M3AS</em>, vol. 22, Supp. 1, 2012.
+</li>
+
+
+
+<li>
+    <b><a href="https://arxiv.org/pdf/1010.4050.pdf">Efficient Matrix Completion with Gaussian Models</a></b> <br>
+    Flavien Léger, Guoshen Yu and Guillermo Sapiro. <br>
+    In <em>IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</em>, 2011.
+</li>
+
+
+
+
+
 </ul>
 
 
