Correct mistake pointed out by FXV, quadratic kernel instead of W

--- a/gradient-flows.html
+++ b/gradient-flows.html
@@ -79,9 +79,9 @@ where $u_\infty(\rho)=0$ if $0\le \rho \le 1$ and $\infty$ otherwise.</li>
 
 <li><a href="#aggregation">(An aggregation-diffusion equation)</a> Convex-concave energies 
 $$
-U(\rho) = \int_{\mathbb{R}^2} u_m(\rho(x))\,dx + \iint_{\mathbb{R}^2\times \mathbb{R}^2} W(x-y)\rho(x)\rho(y)\,dxdy,
+U(\rho) = \int_{\mathbb{R}^2} u_m(\rho(x))\,dx + \iint_{\mathbb{R}^2\times \mathbb{R}^2} \lvert x-y\rvert^2\rho(x)\rho(y)\,dxdy.
 $$ 
-where $W$ is convex interaction kernel. Note that the first term in convex in $\rho$ while the second term is concave in $\rho$. 
+Note that the first term in convex in $\rho$ while the second term is concave in $\rho$. 
 </li>
 </ul>
 </p>
